--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+body {
+  background-color: rgb(38, 38, 38);
+  margin: 0;
+  font-family: Inter, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
+  background-color: rgb(24, 24, 24);
+  color: rgb(99, 200, 247);
+  padding: 10px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav>img {
+  padding-right: 10px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav>h4 {
+  margin-left: auto;
+  color: aliceblue;
+
+}
+
+.Main-content {
+  color: aliceblue;
+  padding: 20px;
+
+}
+
+.Main-bullets>li {
+  padding-block: 7px;
+}
+
+.Main-bullets>li::marker {
+  font-size: 1.4rem;
+  color: rgb(99, 200, 247);
 }
